# pacific_scales_parser

./: .clang-format  CMakeLists.txt  README.md  build.sh
include/: circular_buffer.h  scale_data_parser.h  serial_device.h
src/: main.cc  scale_data_parser.cc  serial_device.cc
